[package]
name = "kubikey"
version = "0.1.0"
authors = ["Ruben Nijveld <ruben@tweedegolf.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
reqwest = "0.11.0"
yubikey-piv = "0.1.0"
rpassword = "5.0"
zeroize = "1.2"
signature = "1.3.0"
sha2 = "0.9.2"