[package]
name = "kubikey"
version = "0.1.0"
authors = ["Ruben Nijveld <ruben@tweedegolf.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-rc.3", features = ["derive"] }
reqwest = { version="0.11", features = ["blocking", "json"] }
yubikey = "0.5"
rpassword = "5.0"
zeroize = "1.4"
signature = "1.3"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"
time = { version = "0.3", features = ["formatting", "serde", "parsing"] }
askama = "0.10"
dirs = "4.0"
